# Xergon

./: .gitignore  ACTION-PLAN-2-3-WEEKS.md  AGENTS.md  ANALYSIS-SUMMARY.md  AUTOMATED-FIX-COMPLETION.md  AUTOMATED-FIX-SYSTEM.md  CHANGES-2026-04-12.md  CLAUDE.md  CRON-EXECUTION-REPORT-2026-04-11.md  CRON-PROGRESS-2026-04-11-FINAL-REPORT.md  CRON-PROGRESS-2026-04-11-FINAL.md  CRON-PROGRESS-2026-04-11-SETTLEMENT.md  CRON-PROGRESS-2026-04-11.md  DEAD-CODE-REMOVAL-PLAN.md  DEPENDABOT-PR-COMPATIBILITY-REVIEW.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_GAP_REPORT.md  DUPLICATE_CODE_REPORT.md  ERG_INTEGRATION_VERIFICATION.md  EXECUTIVE-SUMMARY-UPDATED.md  EXECUTIVE-SUMMARY.md  EXPECTATIONS.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-STATUS.md  MCP-UTXO-FIX-SUMMARY.md  MULTI-AGENT-PR-REVIEW-2026-04-12.md  MULTI-AGENT-PR-REVIEW-FINAL.md  MULTI-AGENT-PR-REVIEW-REPORT.md  MULTI_AGENT_PR_REVIEW_2026-04-12.md  Makefile  PERFORMANCE-EXECUTIVE-SUMMARY.md  PERFORMANCE-OPTIMIZATION-REVIEW.md  PERFORMANCE-REVIEW-2026-04-12.md  PERFORMANCE_REVIEW_2026-04-12.md  PHASE1-COMPLETE.md  PHASE4-COMPLETE.md  PR-19-CODE-QUALITY-REVIEW.md  PR-19-ERGO-DOCUMENTATION-REVIEW.md  PR-19-MULTI-AGENT-REVIEW.md  PR-MARKER.md  (+33 more)
xergon-agent/: Cargo.toml  Dockerfile  README.md  config.toml.example
xergon-agent/contracts/: README.md  governance_proposal.es  provider_box.es  provider_registration.es  provider_slashing.es  usage_proof.es  user_staking.es
xergon-agent/scripts/: create_staking.sh
xergon-agent/src/: ab_testing.rs  ab_testing_v2.rs  airdrop.rs  alignment_training.rs  artifact_storage.rs  audit.rs  audit_log_aggregator.rs  auto_heal.rs  auto_model_pull.rs  auto_scale.rs  benchmark.rs  canary_deploy.rs  chaos_testing.rs  checkpoint.rs  compliance.rs  config_reload.rs  container.rs  content_safety.rs  context_builder.rs  contract_compile.rs  contract_lifecycle.rs  distributed_inference.rs  download_progress.rs  dynamic_batcher.rs  e2e_integration.rs  e2e_protocol.rs  ergo_cost_accounting.rs  ergo_oracle_feeds.rs  experiment_framework.rs  feature_flags.rs  federated_learning.rs  federated_training.rs  fine_tune.rs  gossip.rs  governance_executor.rs  gpu_memory.rs  gpu_scheduler.rs  hardware.rs  health_deep.rs  inference_autoscaler.rs  (+69 more)
xergon-agent/tests/: integration_test.rs  on_chain_test.rs
xergon-marketplace/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  _add_translations.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  server.js  tsconfig.json  vitest.config.ts
xergon-marketplace/__tests__/: ModelSelector.test.tsx  Navbar.test.tsx  PromptBox.test.tsx  ResponseArea.test.tsx  ThemeToggle.test.tsx
xergon-marketplace/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
xergon-marketplace/components/: AppShell.tsx  CreditsBadge.tsx  LanguageSwitcher.tsx  LocaleInit.tsx  ModelSelector.tsx  Navbar.tsx  NotificationBell.tsx  PromptBox.tsx  ResponseArea.tsx  ServiceWorkerRegister.tsx  ThemeProvider.tsx  ThemeToggle.tsx
xergon-marketplace/docs/: openapi.yaml
xergon-marketplace/hooks/: use-realtime-updates.ts
xergon-marketplace/lib/: auth-context.tsx  constants.ts  sw-register.ts
xergon-marketplace/public/: manifest.json  offline.html  sw.js
xergon-marketplace/src/: advanced_search.rs  analytics.rs  billing_invoicing.rs  contract_explorer.rs  deployment_dashboard.rs  deployment_templates.rs  dispute_resolution.rs  earnings_dashboard_v2.rs  ensemble_marketplace.rs  ergoauth_nft_cards.rs  ergopay_qr.rs  escrow_contracts.rs  event_bus.rs  governance_dashboard.rs  inference_pricing_engine.rs  lib.rs  model_comparison_matrix.rs  model_marketplace.rs  model_provenance.rs  model_reviews.rs  network_explorer.rs  nft_registry.rs  notifications_v2.rs  og_image_generator.rs  price_feed.rs  protocol_engine.rs  protocol_health.rs  provider_chain_verify.rs  provider_dashboard.rs  provider_monitor.rs  provider_portfolio.rs  provider_sla_dashboard.rs  provider_verification_v2.rs  proxy.rs  reputation_v2.rs  review_moderation.rs  search_v2.rs  settlement_dashboard.rs  staking_dashboard.rs  treasury_governance.rs  (+1 more)
xergon-marketplace/styles/: mobile.css
xergon-marketplace/types/: ergo-connector.d.ts  portfolio.ts
xergon-relay/: .dockerignore  .gitignore  CODEGEN.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.toml.example  config.toml.prod.example
xergon-relay-broken/: Cargo.toml  README.md  config.toml.example
xergon-relay-broken/docs/: openapi.yaml
xergon-relay-broken/src/: adaptive_retry.rs  api_key_manager.rs  auth.rs  balance.rs  cache_middleware.rs  cache_sync.rs  chain_adapters.rs  chain_cache.rs  chain_state_sync.rs  coalesce.rs  config.rs  connection_pool_v2.rs  content_negotiation.rs  contract_verifier.rs  cost_estimator.rs  dedup.rs  degradation.rs  demand.rs  dynamic_pricing.rs  e2e_tests.rs  ergopay_builder.rs  events.rs  free_tier.rs  gossip.rs  health.rs  main.rs  metrics.rs  middleware.rs  network_health_monitor.rs  oracle_consumer.rs  provider.rs  provider_box_scanner.rs  proxy.rs  rate_limiter_v2.rs  stream_buffer.rs  webhook.rs
xergon-relay/scripts/: codegen.sh
xergon-relay/src/: adaptive_router.rs  admin.rs  api_gateway.rs  api_key_manager.rs  api_version.rs  audit.rs  auth.rs  auto_register.rs  avl_state_engine.rs  babel_box_discovery.rs  babel_fee_integration.rs  cache.rs  cache_middleware.rs  cache_sync.rs  capability_negotiation.rs  chain.rs  circuit_breaker.rs  coalesce.rs  coalesce_buffer.rs  config.rs  connection_pool_v2.rs  content_negotiation.rs  continuous_batching.rs  cors_v2.rs  credits.rs  cross_chain_bridge.rs  cross_chain_event_router.rs  cross_provider_orchestration.rs  db.rs  degradation.rs  dynamic_pricing.rs  e2e_tests.rs  encrypted_inference.rs  ensemble_router.rs  ergopay_signing.rs  ergotree_evaluator.rs  events.rs  geo_router.rs  graphql.rs  handlers.rs  (+55 more)
xergon-sdk/: CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  xergon-sdk-0.1.0.tgz
xergon-sdk-python/: README.md  pyproject.toml
xergon-sdk/src/: audio.ts  (+60 more)
(+731 files in other folders)
