[package]
name = "xergon-agent"
version = "0.1.0"
edition = "2021"
description = "Xergon Agent - Rust sidecar for Ergo nodes providing PoNW scoring and P2P peer discovery"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }
# HTTP client for probing peers
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
async-stream = "0.3"
# HTTP server for our own REST API
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Configuration
config = { version = "0.14", features = ["toml"] }
toml_edit = "0.25"
# Error handling
anyhow = "1"
thiserror = "2"
# Time
chrono = { version = "0.4", features = ["serde"] }
# Hashing (node IDs, wallet)
sha2 = "0.10"
hex = "0.4"
blake2 = "0.10"
blake3 = "1"
digest = "0.11"
generic-array = "0.14"
# Wallet & signing
bip39 = "2"
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
rpassword = "7"
dirs = "5"
libc = "0.2"
# CLI args
clap = { version = "4", features = ["derive", "env"] }
# Concurrent collections
dashmap = "6"
hostname = "0.4.2"
# Ergo blockchain library (optional, heavy C-bindings via sigma-rust)
ergo-lib = { version = "0.28", optional = true }
# URL parsing for config validation
url = "2"
# Content safety: Aho-Corasick for fast multi-pattern keyword matching
aho-corasick = "1"
# Content safety: regex pattern matching
regex = "1"
# Base58 encoding (for P2S address decoding in compile_contracts binary)
bs58 = "0.5"
# SSH tunnel management for GPU rental access
ssh2 = { version = "0.9", optional = true }
# Semver version comparison (for self-update)
semver = "1"
# secp256k1 elliptic curve (for ErgoAuth signature verification)
k256 = { version = "0.13", features = ["ecdsa", "schnorr", "serde"] }
# JWT encoding/decoding
jsonwebtoken = "9"
# UUID generation for request IDs
uuid = { version = "1", features = ["v4"] }
# OpenSSL (vendored static) — used by ssh2/libssh2-sys for musl static builds
# The 'vendored' feature forces openssl-sys to build OpenSSL from source, eliminating system OpenSSL deps
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["ergo-lib", "gpu-rental"]
ergo-lib = ["dep:ergo-lib"]
gpu-rental = ["dep:ssh2"]

[profile.release]
opt-level = 3
lto = true
