[package]
name = "xergon-marketplace"
version = "0.1.0"
edition = "2021"
description = "Xergon Marketplace — Model marketplace and analytics for the Xergon Network"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
urlencoding = "2"

[dev-dependencies]
