[package]
name = "xergon-relay"
version = "0.1.0"
edition = "2021"

[features]
default = ["core", "auth", "routing", "cache", "metrics"]

# Core features
core = []
auth = []
routing = []
cache = []
metrics = []

# Experimental features (disabled by default)
experimental = []
cross-chain = ["experimental"]
governance = ["experimental"]
bridge = ["experimental"]

# Advanced features (disabled by default)
advanced = []
quantum-crypto = ["experimental"]
zkp = ["experimental"]
homomorphic = ["experimental"]
grpc = ["experimental"]

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
config = "0.14"
dashmap = "6"
moka = { version = "0.12", features = ["sync"] }
governor = "0.6"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = "0.26"
tower = "0.5"
url = "2.5"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
rand = "0.10"
blake3 = "1.8"
bytes = "1"
aes-gcm = "0.10"
x25519-dalek = "2"
futures-core = "0.3"
pin-project-lite = "0.2"
flate2 = "1.1"
opentelemetry = "0.31"
async-graphql = { version = "7", optional = true }
async-graphql-axum = { version = "7", optional = true }
prost = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
assert-json-diff = "2.0"

[build-dependencies]
