[package]
name = "xergon-relay-minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.13", features = ["json"] }
thiserror = "1"
config = "0.14"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.39", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
