[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xergon-sdk"
version = "0.1.0"
description = "Python SDK for the Xergon Network decentralized AI compute relay"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Xergon Network", email = "dev@xergon.gg" },
]
keywords = ["xergon", "ergo", "ai", "decentralized", "compute"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.20",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://degens.world"
Repository = "https://github.com/Xergon-Network/xergon-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/xergon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
