[package]
name = "xergon-sdk"
version = "0.1.0"
edition = "2021"
description = "Xergon SDK — Programmatic benchmarking and client library for the Xergon Network"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
